k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hw2app
  name: hw2app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw2app
  strategy: {}
  template:
    metadata:
      labels:
        app: hw2app
    spec:
      containers:
      - image: chocolazerboom/otus_hw2app
        name: hw2app
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
