k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw2app-service
spec:
  selector:
    app: hw2app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
